# num-yomi

./: .gitignore  CHANGELOG.md  CHAT_HISTORY_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  USER_CHAT_MESSAGES.md  japanese_number_reading-design-v0.1.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
bench/: bench_node.mjs  bench_node_call.mjs  bench_node_common.mjs  bench_node_replace_call.mjs  bench_node_sample_replace_call.mjs  bench_python_call.py  bench_python_common.py  bench_python_replace_call.py  bench_python_sample_replace_call.py
docs/: rule_files_design.md  unsupported_patterns_from_locotown_tests.md
python_impl/: __init__.py  generated_rules.py  num_yomi.py  yomi.py
rules/ja/: core.json  counters.json  patterns.json
rust_impl/: Cargo.toml  build.rs
rust_impl/src/: bench_common.rs  lib.rs  main.rs
scripts/: compare_benchmarks.py  compare_sample_benchmark.py  generate_rules_artifacts.py  run-cases.js  update_readme_benchmarks.py
src/: index.ts
src/cli/: num-yomi.ts  replace-num-yomi.ts  shared.ts  yomi-file.ts  yomi.ts
src/core/: cache.ts  join.ts  normalize.ts  parseNumber.ts  readNumberTokens.ts
src/counters/: apply.ts  detect.ts  patterns.ts
src/rules/: load.ts  types.ts  validate.ts
test/: cases.json  replace_cases.json  sample.expected.txt  sample.txt
