[project]
name = "num-yomi-python-tools"
version = "0.1.0"
description = "Python tooling environment for num-yomi"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
exclude = [
  "node_modules",
  "dist",
  "rust_impl/target",
  "python_impl/generated_rules.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
